# rust-amqp

./: Cargo.toml
examples/: consumer.rs  exchange_bind.rs  interactive.rs  producer.rs  simple.rs
src/: amqp_error.rs  basic.rs  channel.rs  codec.rs  codegen_macros.rs  connection.rs  lib.rs  session.rs
