[package]

name = "amqp"
version = "0.1.1"
authors = ["Andrii Dmytrenko <refresh.xss@gmail.com>"]
description = "AMQP/RabbitMQ protocol client"
repository = "https://github.com/Antti/rust-amqp"
license = "MIT/Apache-2.0"
keywords = ["amqp", "rabbitmq", "queue"]
readme = "Readme.md"
# build = "build.rs"

[lib]
name = "amqp"

[features]
tls = ["openssl", "tokio-openssl"]
default = ["tls"]

[dependencies]
#amq-proto = "0.1.0"
amq-proto = { git = "https://github.com/faradayio/rust-amq-proto" }
bytes = "0.4"
futures = "0.1"
log = "0.3"
openssl = { version = "0.10", optional = true }
tokio = "0.1"
tokio-io = "0.1"
tokio-openssl = { version = "0.2", optional = true }
url = "1.2"

[dev-dependencies]
# clippy  = "*"
env_logger = "0.3"
